--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "Node 3 - Afternoon",
   "main": "server/index.js",
+  "proxy": "http://localhost:3049",
   "dependencies": {
     "axios": "^0.16.2",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "massive": "^5.11.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
     "react-redux": "^5.0.5",
+    "react-router": "^5.0.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
     "redux-promise-middleware": "^4.3.0"
